kubernetes/workloads/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
        - name: deluge
          image: 'linuxserver/deluge:2.2.0'
          ports:
            - containerPort: 8112
              protocol: TCP
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
            - name: tv
              mountPath: /tv
          resources:
            requests:
              cpu: "300m"
              memory: "200Mi"
            limits:
              cpu: "400m"
              memory: "300Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: deluge
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: movies
          persistentVolumeClaim:
            claimName: movies
        - name: tv
          persistentVolumeClaim:
            claimName: series
