kubernetes/workloads/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
spec:
  selector:
    app: deluge
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
